Optimized the responsive design for small mobile screens and fixed the horizontal scroll issue

--- a/Front SaaS/public/styles/responsive.css
+++ b/Front SaaS/public/styles/responsive.css
@@ -1,3 +1,4 @@
+/* Responsive Nav */
 @media screen and (max-width: 760px) {
   [aria-controls="navigation-menu"] {
     display: block;
@@ -34,6 +35,7 @@
   }
 }
 
+/* Tablet Screen */
 @media screen and (max-width: 768px) {
   header {
     text-align: center;
@@ -92,7 +94,8 @@
   }
 }
 
-@media screen and (max-width: 380px) {
+/* Mobile Screen */
+@media screen and (max-width: 430px) {
   [aria-expanded="true"] ~ .navigation-menu .nav-list {
     text-align: center;
     flex-direction: column;
@@ -145,5 +148,21 @@
 
   .hire-us form.hire-us-form .btn-wrapper .btn:nth-child(1) {
     display: none;
+  }
+}
+
+/* Small Mobile Screens */
+@media screen and (max-width: 375px) {
+  .header-brands .brand-bubble {
+    width: 80px;
+    height: 80px;
+  }
+
+  .pricing .container {
+    padding: 15px;
+  }
+
+  .hire-us form.hire-us-form {
+    padding: var(--size-20);
   }
 }
